kubernetes/apps/paperless/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: paperless
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Paperless
    gethomepage.dev/group: Documents
    gethomepage.dev/icon: paperless-ngx.png
    gethomepage.dev/href: https://paperless.${cluster_domain}
    gethomepage.dev/podSelector: app.kubernetes.io/name=paperless-ngx
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.${cluster_domain}`)
      kind: Rule
      services:
        - name: paperless-ngx
          port: 8000
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ai
  namespace: paperless
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Paperless-AI
    gethomepage.dev/group: Documents
    gethomepage.dev/icon: paperless-ngx.png
    gethomepage.dev/href: https://paperless-ai.${cluster_domain}
    gethomepage.dev/podSelector: app.kubernetes.io/name=paperless-ai
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless-ai.${cluster_domain}`)
      kind: Rule
      services:
        - name: paperless-ai
          port: 3000
  tls: {}
